# 2D-Computer-Vision

Abgabe_1/: abgabe1.ipynb
Abgabe_2/: abgabe2.ipynb
Abgabe_3/: abgabe3.ipynb
Abgabe_4/: Abgabe4.ipynb  CMakeLists.txt  abgabe4.ipynb  setup.py  sobel.py  sobel_demo.cpp  sobel_demo.py  sobel_test.py
Abgabe_5/: abgabe5.ipynb
Abgabe_6/: abgabe6.ipynb
Abgabe_7/: abgabe7.ipynb
